--- a/pass/pass/VC/Base.lproj/Main.storyboard
+++ b/pass/pass/VC/Base.lproj/Main.storyboard
@@ -945,6 +945,48 @@
             </objects>
             <point key="canvasLocation" x="4526" y="779"/>
         </scene>
+        <!--Wating View Controller-->
+        <scene sceneID="GBU-5c-Dv1">
+            <objects>
+                <viewController storyboardIdentifier="WatingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="llq-BI-jgj" customClass="WatingViewController" customModule="pass" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="v2b-p1-aMR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="승인을 기다리는중..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzq-ek-Hhb">
+                                <rect key="frame" x="16" y="20" width="343" height="627"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O12-ic-PzI">
+                                <rect key="frame" x="317" y="39" width="22" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="daR-IV-Ocn"/>
+                                    <constraint firstAttribute="width" constant="22" id="vaJ-xu-COZ"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5xm-Su-XXS" firstAttribute="trailing" secondItem="O12-ic-PzI" secondAttribute="trailing" constant="36" id="6wh-bm-lzq"/>
+                            <constraint firstItem="5xm-Su-XXS" firstAttribute="trailing" secondItem="lzq-ek-Hhb" secondAttribute="trailing" constant="16" id="Hfv-Lv-qCG"/>
+                            <constraint firstItem="O12-ic-PzI" firstAttribute="top" secondItem="5xm-Su-XXS" secondAttribute="top" constant="19" id="KpQ-wx-RW5"/>
+                            <constraint firstItem="lzq-ek-Hhb" firstAttribute="leading" secondItem="5xm-Su-XXS" secondAttribute="leading" constant="16" id="Z4d-Uu-GWJ"/>
+                            <constraint firstItem="lzq-ek-Hhb" firstAttribute="top" secondItem="5xm-Su-XXS" secondAttribute="top" id="a5R-O8-o5h"/>
+                            <constraint firstItem="5xm-Su-XXS" firstAttribute="bottom" secondItem="lzq-ek-Hhb" secondAttribute="bottom" constant="20" id="d3u-ci-SXk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5xm-Su-XXS"/>
+                    </view>
+                    <connections>
+                        <outlet property="statusLabel" destination="lzq-ek-Hhb" id="a5L-pc-rDE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZY1-So-CY7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5269.6000000000004" y="778.56071964017997"/>
+        </scene>
     </scenes>
     <resources>
         <image name="app-icon" width="512" height="512"/>
